--- a/tiredd/package.json
+++ b/tiredd/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "~12.0.4",
     "m3o": "^1.0.529",
     "ngx-cookie-service": "^12.0.3",
+    "ngx-timeago": "^2.0.0",
     "ngx-toastr": "^14.1.3",
     "rxjs": "~6.6.0",
     "tslib": "^2.1.0",
